# open-drone

./: .gitignore  drone.code-workspace
body-design/: 2205-6inch.FCStd
body-design/v1/: battery_bracket (Meshed).stl  body (Meshed).stl  electronics_screw_sleeve (Meshed).stl  electronics_screw_sleeve (fix).stl  motor-arm (Meshed).stl
body-design/v1.1/: battery_bracket.stl  body.stl  electronics_screw_spacer.stl  electronics_shield.stl
controller-transmitter/: Cargo.toml  justfile
controller-transmitter/scripts/: free-transmiter.sh  setup-transmiter.sh
controller-transmitter/src/: main.rs
controller-transmitter/src/input/: controller.rs  mod.rs
controller-transmitter/src/wifi/: ieee80211_frame.rs  mod.rs  radiotap.rs
docs/: references.md
esp32-serial/: Cargo.toml  justfile
esp32-serial/src/: main.rs
esp32-serial/src/comms/: i2c.rs
esp32-serial/src/inertial_measurement/: accelerometer.rs
flight-controller/: Cargo.toml  sdkconfig.defaults
flight-controller-nostd/: Cargo.toml
flight-controller-nostd/.cargo/: config.toml
flight-controller-nostd/src/: main.rs  shared_core_values.rs  tasks.rs  threads.rs
flight-controller-nostd/src/communication_interfaces/: controller.rs  mod.rs  wifi_control.rs
flight-controller-nostd/src/communication_interfaces/ibus/: controller.rs  mod.rs  protocol.rs  telemetry.rs
flight-controller-nostd/src/config/: constants.rs  store.rs
flight-controller-nostd/src/control/: control_loops.rs  flight_controllers.rs  integrator.rs  kalman_filter.rs  mod.rs
flight-controller-nostd/src/drivers/: i2c.rs  imu_sensors.rs  mod.rs
flight-controller-nostd/src/drivers/mpu_6050/: device.rs  mod.rs  registers.rs
flight-controller-nostd/src/output/: mod.rs  motor_controller.rs  motors_state_manager.rs  vehicle_movement_mappers.rs
flight-controller-nostd/src/util/: error.rs  mod.rs  time.rs
flight-controller-nostd/src/util/math/: vectors.rs
flight-controller/.cargo/: config.toml
flight-controller/src/: main.rs  shared_core_values.rs  tasks.rs  telemetry.rs  threads.rs
flight-controller/src/communication_interfaces/: controller.rs  i2c.rs  i2c_adapter.rs  ibus.rs  mod.rs  wifi.rs  wifi_control.rs
flight-controller/src/communication_interfaces/esp32/: esp32_i2c.rs  mod.rs
flight-controller/src/communication_interfaces/ibus/: controller.rs  mod.rs  protocol.rs  telemetry.rs
flight-controller/src/config/: constants.rs  store.rs
flight-controller/src/control/: control_loops.rs  fligth_controllers.rs  integrator.rs  kalman_filter.rs  mod.rs  pid.rs  vehicle_movement_mappers.rs
flight-controller/src/control/inertial_measurement/: imu_sensor_traits.rs  imu_sensors.rs  mod.rs  mpu_6050.rs  vectors.rs
flight-controller/src/drivers/: imu_sensors.rs  mod.rs  mpu_6050.rs
flight-controller/src/drivers/mpu_6050/: device.rs  registers.rs
flight-controller/src/inertial_measurement/: accelerometer.rs  gyroscope.rs  mod.rs
flight-controller/src/inertial_measurement/sensors/: mod.rs
flight-controller/src/output/: mod.rs  motor_controller.rs  motors_state_manager.rs  vehicle_movement_mappers.rs
flight-controller/src/util/: error.rs  mod.rs  time.rs  vectors.rs
flight-controller/src/util/math/: vectors.rs
shared-definitions/: Cargo.toml
shared-definitions/src/: controller.rs  mod.rs
shared-definitions/src/wifi/: builders.rs  mod.rs  payloads.rs
video-transmitter/: Cargo.toml
video-transmitter/src/: main.rs
wifi-protocol/: Cargo.toml
wifi-protocol/src/: builders.rs  ieee80211_frame.rs  ieee80211_frames.rs  payloads.rs  radiotap.rs  wifi.rs
