[package]
name = "controller-transmitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tuning"]
controller = []
tuning = []

[dependencies]
bitfield-struct = "0.6.0"
bitflags = "2.4.2"
byteorder = "1.5.0"
crc = "3.0.1"
libwifi = "0.3.1"
pcap = "1.2.0"
proctitle = "0.1.1"
radiotap = "1.3.0"
rawsock = "0.3.0"
shared-definitions = { path = "../shared-definitions", features = ['wifi'] }
