[package]
name = "flight-controller-nostd"
version = "0.1.0"
authors = ["Manuel Baez <manuelbaezbatista@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32-hal = { version = "0.18.0", features = [
    "embassy",
    "async",
    "embassy-time-timg0",
    "embassy-executor-thread"
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32"] }
libm = "0.2.8"
embassy-time = "0.3.0"
embassy-executor ={ version="0.5.0"}
bitfield-struct = "0.6.0"
embedded-hal = { version = "1.0.0", package = "embedded-hal" }

# once_cell = "1.19.0"


[features]
default = ["esp32-hal/xtal-40mhz"]
