[package]
name = "flight-controller-nostd"
version = "0.1.0"
authors = ["Manuel Baez <manuelbaezbatista@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true


[profile.dev.package.esp-storage]
opt-level = 2
[profile.release.package.esp-storage]
opt-level = 3

[dependencies]
esp32-hal = { version = "0.18.0", features = [
    "embassy",
    "async",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "eh1",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32"] }
libm = "0.2.8"
embassy-time = "0.3.0"
embassy-executor = { version = "0.5.0", features=['executor-thread'] }
bitfield-struct = "0.6.0"
shared-definitions = { path = "../shared-definitions", features = ['wifi'] }
esp-storage = { version = "0.3.0", features = ['esp32'] }
embedded-storage = "0.3.1"
# once_cell = "1.19.0"


[features]
default = ["esp32-hal/xtal-40mhz"]
