[package]
name = "flight-controller-nostd"
version = "0.1.0"
authors = ["Manuel Baez <manuelbaezbatista@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true


[profile.dev.package.esp-storage]
opt-level = 2
[profile.release.package.esp-storage]
opt-level = 3

[dependencies]
esp-hal = { path = "../../esp-hal/esp-hal", features = [
    "esp32",
    "embassy",
    "embassy-time-timg0",
    "embassy-executor-thread",
    "embassy-executor-interrupt",
    "eh1",
    "async",
] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "panic-handler",
    "exception-handler",
    "println",
] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
libm = "0.2.8"
embassy-time = { version = "0.3.0", features = [
    "generic-queue-8",
] } #need this feature (or embassy-executor/integrated-timers) to not fail linker
embassy-executor = { path = "../../embassy/embassy-executor", features = [
    'executor-thread',
    'nightly',
] }
bitfield-struct = "0.6.0"
shared-definitions = { path = "../shared-definitions", features = ['wifi'] }
esp-storage = { version = "0.3.0", features = ['esp32'] }
embedded-storage = "0.3.1"
static_cell = "2.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
esp-alloc = "0.3.0"
