[package]
name = "drone-flight-computer"
version = "0.1.0"
authors = ["Manuel Baez <manuelbaezbatista@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.0", default-features = false }
mpu6050 = "0.1.6"
embedded-hal = { version = "1.0.0", package = "embedded-hal" }
embedded-hal-0-2 = { version = "0.2.7", package = "embedded-hal" }
rayon = "1.8.1"
libm = "0.2.8"
nalgebra = "0.32.3"
libwifi = "0.3.1"
shared-definitions = { path = "../shared-definitions" }

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies]
cargo-watch = "8.5.2"
espflash = "2.1.0"
just = "1.23.0"
