[package]
name = "drone-flight-computer"
version = "0.1.0"
authors = ["Manuel Baez <manuelbaezbatista@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = 3

[profile.dev]
debug = true  # Symbols are nice and they don't increase the size on Flash
opt-level = 3

# [profile.dev.package.esp-storage]
# opt-level = 3

[features]
default = [
    "std",
    "embassy",
    "esp-idf-svc/native",
    "wifi-tuning",
    "ibus-controller",
]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]
wifi = []
wifi-controller = ["wifi"]
ibus-controller = []
wifi-tuning = ["wifi"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.0", default-features = false }
embedded-hal = { version = "1.0.0", package = "embedded-hal" }
libm = "0.2.8"
libwifi = "0.3.1"
shared-definitions = { path = "../shared-definitions", features = ['wifi'] }
bitfield-struct = "0.6.0"
once_cell = "1.19.0"
esp-storage = { version = "0.3.0", package = "esp-storage", features = [
    'esp32',
] }
embedded-storage = "0.3.1"

[build-dependencies]
embuild = "0.31.3"

[dev-dependencies]
cargo-watch = "8.5.2"
espflash = "2.1.0"
just = "1.23.0"
